--- a/index.html
+++ b/index.html
@@ -3258,7 +3258,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.3);
             padding: 4px;
-            z-index: 10000;
+            z-index: 999999;
             min-width: 140px;
         }
 
@@ -11990,10 +11990,12 @@ IMPORTANT: JSON uniquement, pas de texte autour.`
                 };
 
                 assetsGrid.innerHTML = sortedFiles.map((f, idx) => {
-                    const folderEsc = JSON.stringify(assets.folder);
-                    const fileEsc = JSON.stringify(f.file);
-                    const companyEsc = JSON.stringify(prospect.company);
-                    const urlEsc = f.url ? JSON.stringify(f.url) : 'null';
+                    // Echapper pour HTML attribute (remplacer " par &quot;)
+                    const escapeHtml = (str) => str.replace(/"/g, '&quot;');
+                    const folderEsc = escapeHtml(JSON.stringify(assets.folder));
+                    const fileEsc = escapeHtml(JSON.stringify(f.file));
+                    const companyEsc = escapeHtml(JSON.stringify(prospect.company));
+                    const urlEsc = f.url ? escapeHtml(JSON.stringify(f.url)) : 'null';
                     return `
                     <div class="asset-card ${f.favorite ? 'favorite' : ''}" data-asset-type="${f.type || 'doc'}" onclick="event.stopPropagation(); openAsset(${folderEsc}, ${fileEsc}, ${urlEsc})">
                         <div class="asset-card-icon ${f.type}">${typeIcons[f.type] || '📄'}</div>
